--- a/circuit_breaker/Cargo.toml
+++ b/circuit_breaker/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 retry = { path = "../retry" }
+tracing = "0.1.19"
 
 [dev-dependencies]
 tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
