--- a/circuit_breaker/Cargo.toml
+++ b/circuit_breaker/Cargo.toml
@@ -8,9 +8,11 @@ edition = "2021"
 [dependencies]
 retry = { path = "../retry" }
 tracing = "0.1.19"
+async-trait = "0.1.52"
+atomic = "0.5"
 
 [dev-dependencies]
 tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
 proptest = "1.0.0"
 mockall = "0.11.1"
-async-trait = "0.1.52"
+anyhow = "1.0.62"
